--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://devadula-nandan.github.io/TD-TABLE",
   "name": "td-table",
   "private": true,
   "version": "0.0.0",
@@ -32,6 +33,5 @@
     "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
     "vite": "^5.4.1"
-  },
-   "homepage": "https://devadula-nandan.github.io/TD-TABLE"
+  }
 }
