--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+/.pnp
+.pnp.js
+
+# Build directories
 dist
 dist-ssr
-*.local
+/build
+
+# Testing
+/coverage
 
 # Editor directories and files
 .vscode/*
@@ -23,3 +31,13 @@ dist-ssr
 *.sln
 *.sw?
 *.idx
+
+# Environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Misc
+.eslintcache
+build-storybook.log
