--- a/package.json
+++ b/package.json
@@ -1,37 +1,54 @@
 {
-  "homepage": "https://devadula-nandan.github.io/TD-TABLE",
+  "homepage": "https://devadula-nandan.github.io/TD-TABLE",  
   "name": "td-table",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.2.0",
+  "description": "A template for Storybook React projects",
+  "author": "nandan",
   "type": "module",
+
+  "license": "MIT",
+  "dependencies": {
+    "@faker-js/faker": "^9.0.2",
+    "@tanstack/react-table": "^8.20.5",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.13"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "init-msw": "msw init public/",
     "deploy": "gh-pages -d dist"
   },
-  "dependencies": {
-    "@faker-js/faker": "^9.0.1",
-    "@tanstack/react-table": "^8.20.5",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.45",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.10"
-  },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "daisyui": "^4.12.10",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "gh-pages": "^6.1.1",
-    "globals": "^15.9.0",
-    "vite": "^5.4.1"
+    "@storybook/addon-essentials": "^8.3.2",
+    "@storybook/addon-interactions": "^8.3.2",
+    "@storybook/addon-links": "^8.3.2",
+    "@storybook/blocks": "^8.3.2",
+    "@storybook/react": "^8.3.2",
+    "@storybook/react-vite": "^8.3.2",
+    "@storybook/test": "^8.3.2",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-storybook": "^0.8.0",
+    "msw": "^2.3.0",
+    "msw-storybook-addon": "^2.0.3",
+    "prop-types": "^15.8.1",
+    "storybook": "^8.3.2",
+    "vite": "^5.2.0"
+  },
+  "resolutions": {
+    "jackspeak": "2.1.1"
   }
 }
