--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "init-msw": "msw init public/",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d storybook-static"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^8.3.2",
@@ -42,6 +42,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-storybook": "^0.8.0",
+    "gh-pages": "^6.2.0",
     "msw": "^2.3.0",
     "msw-storybook-addon": "^2.0.3",
     "prop-types": "^15.8.1",
