--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -1,6 +1,7 @@
 name: Percy Visual Regression Testing
 
 on:
+  # Triggers the workflow on push or pull request to main or other branches
   push:
     branches:
       - main
@@ -31,24 +32,12 @@ jobs:
       - name: Build Storybook
         run: yarn build-storybook
 
-      # 5. Generate Storybook URLs
-      - name: Generate Storybook URLs
-        run: node scripts/storybookUrls.js
-
-      # 6. Install Percy CLI (global) for GitHub CI
+      # 5. Install Percy CLI (global) for GitHub CI
       - name: Install Percy CLI
         run: yarn global add @percy/cli
 
-      # 7. Run Percy with Storybook and capture snapshots
+      # 6. Run Percy with Storybook
       - name: Run Percy visual tests
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }} # Percy token set in GitHub Secrets
-        run: |
-          # Start the Storybook server
-          yarn storybook --port 6006 &
-          sleep 10 # Wait for the server to start
-
-          # Read URLs and take snapshots
-          while IFS= read -r url; do
-            percy snapshot "$url"
-          done < storybook-urls.txt
+        run: percy exec -- percy snapshot ./storybook-static
