--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,15 @@
-name: Hello World CI
+name: TD-Table CI
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
-      - main
+      - feat/percy-integration
 
 jobs:
-  hello-world:
+  ci:
+    strategy:
+      matrix:
+        shard: [1, 2]
     runs-on: ubuntu-latest
 
     steps:
@@ -25,5 +25,37 @@ jobs:
       - name: Install dependencies
         run: yarn
 
-      - name: Run Hello World Script
-        run: echo "Hello, World!"
+      - name: Install browsers for Playwright
+        run: yarn playwright install --with-deps
+
+      - name: Build project
+        run: yarn build
+
+      - name: Run Storybook
+        id: storybook
+        run: |
+          npx serve -l 3000 storybook-static/ &
+          echo "pid=$!" >> $GITHUB_ENV
+
+      - name: Wait for Storybook
+        uses: ./actions/wait-for-it
+        with:
+          URL: "http://localhost:3000"
+          timeout-minutes: 3
+
+      # Percy visual regression tests
+      - name: Run Percy Storybook
+        working-directory: storybook-static
+        env:
+          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+        run: yarn percy storybook http://localhost:3000
+
+      - name: Stop Storybook
+        run: kill ${{ env.pid }}
+
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: .playwright
