--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Build project
         run: yarn build
 
+      - name: Build Storybook
+        run: yarn build-storybook
+
       - name: Run Storybook
         id: storybook
         run: |
