--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,9 @@
 name: Percy Visual Regression Testing
 
 on:
-  # Triggers the workflow on push or pull request to the main branch
-  push:
-    branches:
-      - main
   pull_request:
     branches:
-      - main
+      - feat/percy-integration
 
 jobs:
   visual-regression:
