--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Percy Visual Regression Testing
+name: TD-Table CI
 
 on:
   pull_request:
@@ -6,45 +6,62 @@ on:
       - feat/percy-integration
 
 jobs:
-  visual-regression:
+  ci:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout the repository
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      # 2. Set up Node.js environment
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: "20.x"
+          cache: yarn
 
-      # 3. Install dependencies
       - name: Install dependencies
         run: yarn install
 
-      # 4. Build Storybook
+      - name: Install browsers for Playwright
+        run: yarn playwright install --with-deps
+
+      - name: Build project
+        run: yarn build
+
       - name: Build Storybook
         run: yarn build-storybook
 
-      # 5. Install Percy CLI (global) for GitHub CI
-      - name: Install Percy CLI
-        run: yarn global add @percy/cli
+      - name: Start Storybook
+        id: storybook
+        run: |
+          npx serve -l 3000 ./storybook-static &
+          echo "pid=$!" >> $GITHUB_ENV
 
-      # 6. Run Percy with Storybook
-      - name: Run Percy visual tests
+      - name: Wait for Storybook to be Ready
+        run: |
+          for i in {1..30}; do
+            if curl -s http://localhost:3000 > /dev/null; then
+              echo "Storybook is up!"
+              break
+            else
+              echo "Waiting for Storybook..."
+              sleep 6
+            fi
+          done
+
+      # Run Percy with Storybook
+      - name: Run Percy Visual Tests
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }} # Percy token set in GitHub Secrets
         run: |
-          percy exec -- yarn serve storybook-static &
-          sleep 5 # Give it some time to start
-          percy snapshot ./storybook-static
+          percy exec -- yarn percy snapshot ./storybook-static
 
-      # 7. Optional: Upload test results
+      - name: Stop Storybook
+        run: kill ${{ env.pid }}
+
       - name: Upload test results
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: percy-test-results
-          path: ./storybook-static
+          name: test-results
+          path: .playwright
